--- a/admin/css/updraft-disk-usage-plugin-admin.css
+++ b/admin/css/updraft-disk-usage-plugin-admin.css
@@ -2,3 +2,60 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+.tab {
+    overflow: hidden;
+    /*border: 1px solid #ccc;*/
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    /*border: 1px solid #ccc;*/
+    border-top: none;
+}
+.tabcontent {
+    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+p.gather-result-btn{
+    margin-top: 20px;
+}
+
+.wp-updraft-disk-opener{
+    cursor: pointer;
+}
+table#result-table tr td:first-child{
+    font-size: 20px;
+}
+table#result-table{
+    display: none;
+}
